# roboscribe

./: README.md
AI-Agentic-for-Robotic-Control/: HANDOFF.md  LICENSE  README.md  research_survey.md
AI-Agentic-for-Robotic-Control/proposal/: preamble.tex  proposal.tex  proposal_summary.md  references.bib
AI-Agentic-for-Robotic-Control/roboscribe/: README.md  pyproject.toml
AI-Agentic-for-Robotic-Control/roboscribe/examples/: lift_policy.py  stack_policy.py
AI-Agentic-for-Robotic-Control/roboscribe/src/roboscribe/: __init__.py  cli.py  config.py  lift_policy.py  pid.py  stack_policy.py
AI-Agentic-for-Robotic-Control/roboscribe/src/roboscribe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
AI-Agentic-for-Robotic-Control/roboscribe/src/roboscribe/agent/: few_shot.py  interactive.py  loop.py  prompts.py  tool_loop.py  tools.py
AI-Agentic-for-Robotic-Control/roboscribe/src/roboscribe/llm/: anthropic_backend.py  base.py  openai_backend.py
AI-Agentic-for-Robotic-Control/roboscribe/src/roboscribe/output/: writer.py
AI-Agentic-for-Robotic-Control/roboscribe/src/roboscribe/sim/: diagnostics.py  env_registry.py  introspect.py  recorder.py  runner.py  trajectory.py
AI-Agentic-for-Robotic-Control/roboscribe/src/roboscribe/ui/: app.py
AI-Agentic-for-Robotic-Control/roboscribe/tests/: conftest.py  test_cli.py  test_diagnostics.py  test_interactive.py  test_loop.py  test_prompts.py  test_runner.py
roboscribe/: cli.py  config.py  diagnose_video.py  exceptions.py  lift_policy.py  stack_policy.py
roboscribe/agent/: few_shot.py  (+2 more)
(+8 files in other folders)
