[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roboscribe"
version = "0.1.0"
description = "AI agent that generates robosuite scripted policies from natural language"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "numpy>=1.24",
    "openai>=1.0",
    "anthropic>=0.20",
]

[project.optional-dependencies]
sim = ["robosuite>=1.4"]
dev = ["pytest>=7.0", "pytest-mock>=3.0"]

[project.scripts]
roboscribe = "roboscribe.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
